--- a/DXEventsMigrator/App.config
+++ b/DXEventsMigrator/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <connectionStrings>
-      <add name="testDB" connectionString="Data Source=.\sqlexpress;Initial Catalog=try-1;Persist Security Info=True;User ID=sa;Password=MsSql2008"/>
+      <add name="testDB" connectionString="Data Source=.\sqlexpress;Initial Catalog=timetable-migrate;Persist Security Info=True;User ID=sa;Password=MsSql2008"/>
     </connectionStrings>
 </configuration>
